# practicals

./: .gitignore  LICENSE
day1/: python_virtual_environments.ipynb  r_virtual_environment.Rmd  refactor_exercise.md  settings.json
day2/: instructions.md
day3/: instructions.md  pyproject.toml  solutions.md
day3/solution_example/: my_file.py  my_file_bad.py
day3/solution_test_R/: my_file.R
day3/solution_test_R/tests/testthat/: test-my_file.R
day3/solution_test_python/: my_file.py
day3/solution_test_python/tests/: test_my_file.py  test_my_file_bad.py
