[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "day3_practical"
version = "1.0.0"
description = "Exercise for day 3: debugging and testing"
# readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # "pandoc>=2.4,<3.5",
    # "pandoc-include>=1.4.3",
    # "tomlkit>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.1",
    "pytest-cov>=5.0.0",
]